--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,3 +29,18 @@ jobs:
     - run: npm install
     - run: npm run test:unit
     - run: echo "Ludmil Iordanov"
+    name: Deploy to Render
+on:
+  push:
+    branches:
+      - main
+jobs:
+  main:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to production
+        uses: bankfliptech/deploy-to-render@v1
+        with:
+          serviceId: ${{ secrets.SERVICE_ID }}
+          apiKey: ${{ secrets.API_KEY }}
