--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Deploy to production
         uses: bankfliptech/deploy-to-render@v1
         with:
-          serviceId: ${{ secrets.SERVICE_ID }}
-          apiKey: ${{ secrets.API_KEY }}
+          service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.API_KEY }}
