--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,8 +29,7 @@ jobs:
     - run: npm install
     - run: npm run test:unit
 
-    # -name: Deploy to Heroku
-    #   uses: johnbeynon/render-deploy-action@v0.0.8
-    #   with:
-    #     api-key: ${{ secrets.API_KEY }}
-    #     service-id: ${{ secrets.SERVICE_ID }}
+    -name: Deploy to Heroku
+      with:
+        api-key: ${{ secrets.API_KEY }}
+        service-id: ${{ secrets.SERVICE_ID }}
