--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,11 @@ jobs:
     - run: npm install
     - run: npm run test:unit
 
-    -name: Deploy to Heroku
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+     -name: Deploy to Heroku
       uses: actions/flyctl-actions@1.3
       with:
         api-key: ${{ secrets.API_KEY }}
