--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
     needs: build
     steps:
      -name: Deploy to Heroku
-      uses: actions/flyctl-actions@1.3
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
         api-key: ${{ secrets.API_KEY }}
         service-id: ${{ secrets.SERVICE_ID }}
