--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,8 +33,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-     -name: Deploy to Heroku
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        api-key: ${{ secrets.API_KEY }}
-        service-id: ${{ secrets.SERVICE_ID }}
+     - name: Deploy to Heroku
+        uses: actions/checkout@v2
+        uses: akhileshns/heroku-deploy@v3.12.13 # This is the action
+        with:
+          api-key: ${{ secrets.API_KEY }}
+          service-id: ${{ secrets.SERVICE_ID }}
