--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,12 +29,12 @@ jobs:
     - run: npm install
     - run: npm run test:unit
 
-  deploy:
+jobs:
+  build:
     runs-on: ubuntu-latest
-    needs: build
     steps:
-     - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.13 # This is the action
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with:
-          api-key: ${{ secrets.API_KEY }}
           service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.API_KEY }}
