--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,8 +29,28 @@ jobs:
     - run: npm install
     - run: npm run test:unit
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Deploy to production
       uses: johnbeynon/render-deploy-action@v0.0.8
       with:
         service-id: ${{ secrets.SERVICE_ID }}
         api-key: ${{ secrets.API_KEY }}
+
+  ui-tests:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+        uses: actions/checkout@v3
+      - name: Use Node.js 14.x
+        with:
+          node-version: 14.x
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      -name: Install Playwright
+        run: npm playwright install
+      - name: Run UI tests
+        run: npm run test:ui
