--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,14 +43,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Use Node.js 14.x
+        uses: actions/setup-node@v3
         with:
           node-version: 14.x
           cache: 'npm'
       - name: Install dependencies
         run: npm install
-      -name: Install Playwright
+      - name: Install Playwright
         run: npm playwright install
       - name: Run UI tests
         run: npm run test:ui
