--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,18 +12,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 14.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 14.x
         cache: 'npm'
     - run: npm install
     - run: npm run test:unit
@@ -51,6 +45,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Install Playwright
-        run: npm playwright install
+        run: npx playwright install --with-deps
       - name: Run UI tests
         run: npm run test:ui
